--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'com.google.code.gson:gson:2.10.1'
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
     //implementation 'com.graphql-java:graphql-java-extended-validation:22.0'
     implementation 'org.jetbrains:annotations:24.1.0'
     compileOnly 'org.projectlombok:lombok'
