retry confige added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,5 @@ spring.graphql.graphiql.enabled=true
 database-entity.metadata=[{"entity":"operatingSystem","table":"operating_system","schema":"public"}]
 spring.graphiql.enabled=true
 spring.graphiql.path=/graphiql
+
+app.graphql.api.url = http://localhost:8080/graphql
